# agent-spy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  SCREENSHOTS.md  env.example  env.example.production  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: README.md  backend.Dockerfile  backend.simple.Dockerfile  devcontainer.json  development.env  docker-compose.dev-container.yml  docker-compose.dev.yml  docker-compose.minimal.yml  frontend-supervisor.sh  frontend.Dockerfile  frontend.simple.Dockerfile  launch.json  post-create.sh  post-start.sh  tasks.json
.github/: ruleset.yml
docker/: docker-compose.dev.yml  docker-compose.yml  frontend-dev-standalone.Dockerfile  init-postgresql.sql
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: AGENT_SPY_COMPREHENSIVE_GUIDE.md  API_HEALTH_CHECKS.md  API_REFERENCE.md  ARCHITECTURE.md  BACKEND_API.md  DEVCONTAINER_SETUP.md  DEVELOPMENT_GUIDE.md  DOCKER_SETUP.md  EXAMPLES_GUIDE.md  FRONTEND_DASHBOARD.md  OTLP_INTEGRATION.md  OTLP_WEBSOCKET_INTEGRATION.md  PORT_CONFIGURATION_IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  TROUBLESHOOTING.md  docker-setup.md  environment-variables.md  ollama-setup.md  redis-integration.md
docs/plans/: DOCKER_COMPOSE_VERIFICATION_PLAN.md  DOCKER_COMPOSE_VERIFICATION_RESULTS.md  DOCUMENTATION_UPDATE_SUMMARY.md  PROJECT_STATUS_SUMMARY.md
examples/: README.md  multi_step_otlp_workflow.py  nested_workflow_otlp_grpc.py  nested_workflow_otlp_grpc_real.py  ollama_direct_http.py  ollama_otel_instrumentation.py  openai_otel_instrumentation.py  redis_integration_example.py  redis_simple_example.py  simple_ollama_test.py  test_complex_langgraph_workflow.py  test_dual_chain_agent.py  test_langchain_app.py  test_langgraph_agent.py  test_otlp_forwarder.py  test_simple_tracing.py
frontend/: .dockerignore  Dockerfile  env.template  generate-theme.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  theme-tokens.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: docker-dev.sh  docker-start.sh  format.sh  lint.sh  setup-devcontainer.sh  test-docker-setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  batch.py  cache.py  crud.py  dashboard.py  debug.py  health.py  langsmith.py  runs.py  websocket.py
src/core/: __init__.py  config.py  database.py  logging.py  otlp_forwarder.py  redis.py
src/models/: __init__.py  base.py  feedback.py  runs.py
src/otel/: __init__.py  otlp_receiver.py
src/repositories/: __init__.py  feedback.py  runs.py
src/schemas/: __init__.py  dashboard.py  (+2 more)
tests/: __init__.py  conftest.py  test_health.py  test_langchain_integration.py  test_redis_integration.py
(+65 files in other folders)
